k8s/frontend/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: apc-fe-ns
spec:
  replicas: 1
  revisionHistoryLimit: 1  # 👈 회색 박스(이력)를 정리합니다.
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 192.168.0.170:30000/alphacar/alphacar-frontend:latest # 👈 Harbor 주소로 통일
        imagePullPolicy: Always  # 👈 이미지를 항상 새로 받아오도록 강제
        ports:
        - containerPort: 3000
          name: http-web
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apc-fe-ns
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 3000
    name: http-web
  selector:
    app: frontend
