k8s/frontend/frontend-deployment-multimaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: apc-fe-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: frontend
        image: 192.168.0.169/bh/alphacar-frontend:1.0.6
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - name: ssl-cert
          mountPath: /etc/ssl/certs/selfsigned.crt
          subPath: selfsigned.crt
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "300m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
      volumes:
      - name: ssl-cert
        secret:
          secretName: ssl-cert
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apc-fe-ns
spec:
  selector:
    app: frontend
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
